# postgres-parser

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  build.sh  includes.h  symbols.txt
.cargo/: config
.github/workflows/: build.yml  test.yml
examples/: dump.rs  file.rs  json.rs  scanner.rs
patches/: makefiles-12.3.patch  makefiles-13.0.patch
src/: convert.rs  lib.rs  main.rs  nodes.rs  parser.rs  scanner.rs  sys.rs  traits.rs
tests/: parser-tests.rs  scanner-tests.rs
