[package]
name = "postgres-parser"
version = "0.0.1"
authors = ["Eric B. Ridge <eebbrr@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.111", features = ["derive"] }

[build-dependencies]
bindgen = "0.54.0"
num_cpus = "1.13.0"
proc-macro2 = "1.0.17"
quote = "1.0.6"
syn = { version = "1.0.23", features = [ "extra-traits", "full", "fold", "parsing" ] }

[dev-dependencies]
serde_json = "1.0.53"